--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 .vs
+WebApplication1/bin/Debug/net8.0/WebApplication1.exe
+WebApplication1/bin/Debug/net8.0/WebApplication1.dll
