--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ WebApplication1/bin/Debug/net8.0/WebApplication1.dll
 WebApplication1/bin/Debug/net8.0/WebApplication1.exe
 WebApplication1/bin/Release/net8.0/
 WebApplication1/bin/Debug/net8.0/
+WebApplication1/bin/Debug/net8.0/*
+WebApplication1/bin/Debug/net8.0/WebApplication1.dll
+WebApplication1/bin/Debug/net8.0/WebApplication1.exe
+WebApplication1/bin/Debug/net8.0/WebApplication1.pdb
+WebApplication1/obj/Debug/net8.0/apphost.exe
